--- a/src/exp.css
+++ b/src/exp.css
@@ -3,24 +3,26 @@ body{
 }
 
 .experience__div{
-    display:flex;
+    /* display:flex;
     height:100%;
-    flex-direction:column;    
-}
-
-.myexpr{
+    flex-direction:column;     */
     border:1px solid white;
     border-radius:5px;
-    margin-left:auto;
-    margin-right:auto;
+    /* margin-left:auto; */
+    /* margin-right:auto; */
     height:100%;
-    margin:2vh;
+    /* margin:2vh; */
     padding:1em;
     display:flex;
     flex-direction:column;
     flex-wrap:wrap;
     background-color:white;
-    box-shadow:2px 2px 8px 3px rgb(78, 78, 78);
+    /* box-shadow:2px 2px 8px 3px rgb(78, 78, 78); */
+}
+
+.myexpr{
+    background-color:white;
+    margin-bottom:6vh;
 }
 
 h4{
