--- a/src/skill.css
+++ b/src/skill.css
@@ -17,15 +17,18 @@
     flex-direction:row;
     flex-wrap:wrap;
     background-color:white;
-    box-shadow:2px 2px 8px 3px rgb(78, 78, 78);  
+    /* box-shadow:0px 2px 8px 3px rgb(78, 78, 78);   */
     /* margin:2vh; */
 }
+
+
 
 .skill__section{
     background-color:white;
     display:flex;
     flex-direction:column;
-    flex:0.2;
+    flex:0.1;
+    margin:0 2vw 0 2vw;
 }
 
 
