--- a/src/exp.css
+++ b/src/exp.css
@@ -17,7 +17,15 @@ body{
     flex-direction:column;
     flex-wrap:wrap;
     background-color:white;
+    animation-name:showexp;
+    animation-timing-function:linear;
+    animation-duration:1s;
     /* box-shadow:2px 2px 8px 3px rgb(78, 78, 78); */
+}
+
+@keyframes showexp {
+    from {opacity:0}
+    to {opacity:1}
 }
 
 .myexpr{
