--- a/src/skill.css
+++ b/src/skill.css
@@ -17,6 +17,9 @@
     flex-direction:row;
     flex-wrap:wrap;
     background-color:white;
+    animation-name:showexp;
+    animation-timing-function:linear;
+    animation-duration:1s;
     /* box-shadow:0px 2px 8px 3px rgb(78, 78, 78);   */
     /* margin:2vh; */
 }
