--- a/src/skill.css
+++ b/src/skill.css
@@ -30,6 +30,7 @@
     background-color:white;
     display:flex;
     flex-direction:column;
+    /* flex-wrap:wrap; */
     flex:0.1;
     margin:0 2vw 0 2vw;
 }
